<resources>
  <string name="app_name">Foot goal</string>
  <string name="no_network">Oops,Sorry no network available</string>

  <!-- BOTTOM NAVIGATION WORDS !-->
  <string name="bottom_nav_home">HOME</string>
  <string name="bottom_nav_matches">MATCHES</string>
  <string name="bottom_nav_fav">FAVORITE</string>
  <string name="bottom_nav_leagues">LEAGUES</string>

  <!--LEAGUE NAMES !-->
  <string name="champions_league">UEFA CHAMPIONS LEAGGUE</string>
  <string name="euro_champion">EUROPEAN CHAMPIONSHIP</string>
  <string name="premier_league">PREMIER LEAGUE</string>
  <string name="championship">EFL CHAMPIONSHIP</string>
  <string name="serie_a">ITALY SERIE A</string>
  <string name="la_liga">LA LIGA</string>
  <string name="ligue_1">LEAGUE 1</string>
  <string name="bundes_league">BUNDES LEAGUE</string>
  <string name="dutch_league">EREDIVISE</string>
  <string name="portogues">PORTUGUESE PRIMERA DIVISION</string>
  <string name="brazil_league">BRAZILIAN DIVISION LEAGUE</string>
  <string name="news">NEWS</string>
  <string name="language_change">اللغة العربية</string>


  <!--Match Types !-->
  <string name="league_week">WEEK \u0020</string>
  <string name="group_stage">DAY \u0020</string>
  <string name="knock">Knock \u0020</string>
  <string name="postponed">THIS MATCH HAD BEEN <u>POSTPONED</u></string>


  <!--Standing words !-->
  <string name="played">Played \n</string>
  <string name="won">Won \n</string>
  <string name="draw">Draw \n</string>
  <string name="lost">Lost \n</string>
  <string name="scored">Goal Scored \n</string>
  <string name="conceded">Goal Conceded \n</string>
  <string name="points">Points \n</string>
  <string name="position">Position \n</string>
  <string name="goal_diff">Goal Difference \n</string>

  <!-- 0THER !-->
  <string name="gameweek">MatchDay</string>
  <string name="retry">RETRY</string>
  <string name="next">Next</string>
  <string name="prev">Previous</string>
  <string name="fav">You did not select your favorite team yet !</string>
  <string name="squad">VIEW TEAM SQUAD !</string>
  <string name="found">FOUNDED</string>
  <string name="stad_name">STADIUM</string>
  <string name="visit">Visit team\'s website</string>
  <string name="select"><b>Select a team to view its squad</b></string>
  <string name="added_msg">Team data added successfully to your favorites</string>
  <string name="found_msg">Team is already saved in your favorites !</string>
  <string name="tech_error">It seems like that there is an technical issue \n try again after some seconds</string>
  <string name="no_connect">Sorry but there is no active network connection in current time \n check your connections and press retry button </string>
  <string name="no_fav_found">Sorry , you do not added a favorite team yet ,try adding one by going inside league details</string>
  <!-- TAB !-->
  <string name="info">TEAM INFORMATION</string>
  <string name="next_game">NEXT GAMES</string>
  <string name="prev_game">PREVIOUS GAMES</string>
  <string name="squad_tab">SQUAD</string>

  <string name="details_fix">FIXTURES</string>
  <string name="details_table">STANDING</string>
  <string name="details_teams">TEAMS</string>
  <string name="details_score">LEAGUE SCORERS</string>

  <string name="close_msg">Are you sure you want to leave the app ?</string>
  <string name="approve_msg">Yes i want</string>
  <string name="no_msg">No</string>
  <string name="close_title">Close app</string>
  <string name="delete_team_title">Delete a team</string>
  <string name="delete_team_msg">Are your sure you want to remove this team ?</string>


</resources>
