<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/x_small_margin"
    android:fillViewport="true"
    android:measureAllChildren="false"
    android:scrollbars="none">

  <android.support.v7.widget.CardView
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:padding="@dimen/small_padding"
      app:cardCornerRadius="6dp">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkGrey">

      <ImageView
          android:id="@+id/backdrop_img"
          android:layout_width="@dimen/medium_view_width"
          android:layout_height="@dimen/medium_view_height"
          android:alpha=".2"
          android:contentDescription="@null"
          android:layerType="software"
          android:scrollbarAlwaysDrawHorizontalTrack="true"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="@+id/team_standing_postion"
          app:layout_constraintStart_toStartOf="@+id/team_standing_postion"
          app:layout_constraintTop_toTopOf="parent"/>

      <ImageView
          android:id="@+id/emblem_img"
          android:layout_width="@dimen/medium_view_width"
          android:layout_height="@dimen/medium_view_height"
          android:layout_marginStart="@dimen/small_margin"
          android:contentDescription="@null"
          android:layerType="software"
          app:layout_constraintBottom_toBottomOf="@+id/team_standing_postion"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>

      <TextView
          android:id="@+id/team_standing_name"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:fontFamily="@font/fredoka_one"
          android:padding="@dimen/medium_padding"
          android:textAlignment="center"
          android:textSize="@dimen/medium_txt_size"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/emblem_img"
          app:layout_constraintTop_toTopOf="parent"/>

      <TextView
          android:id="@+id/team_standing_postion"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/small_margin"
          android:fontFamily="@font/archivo_black"
          android:text="@string/position"
          android:textAlignment="center"
          android:textColor="@color/whiteColor"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/emblem_img"
          app:layout_constraintTop_toBottomOf="@+id/team_standing_name"/>

      <TextView
          android:id="@+id/team_standing_played"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/small_margin"
          android:layout_marginTop="@dimen/large_margin"
          android:fontFamily="@font/fredoka_one"
          android:padding="@dimen/small_margin"
          android:text="@string/played"
          android:textAlignment="center"
          android:textColor="@color/whiteColor"
          android:textSize="@dimen/small_txt_size"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="@+id/emblem_img"
          app:layout_constraintStart_toStartOf="@+id/emblem_img"
          app:layout_constraintTop_toBottomOf="@+id/emblem_img"/>

      <TextView
          android:id="@+id/team_standing_won"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/small_margin"
          android:fontFamily="@font/fredoka_one"
          android:text="@string/won"
          android:textAlignment="center"
          android:textColor="@color/whiteColor"
          android:textSize="@dimen/small_txt_size"
          app:layout_constraintBottom_toBottomOf="@+id/team_standing_played"
          app:layout_constraintStart_toEndOf="@+id/team_standing_played"
          app:layout_constraintTop_toTopOf="@+id/team_standing_played"/>

      <TextView
          android:id="@+id/team_standing_draw"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/small_margin"
          android:fontFamily="@font/fredoka_one"
          android:text="@string/draw"
          android:textAlignment="center"
          android:textColor="@color/whiteColor"
          android:textSize="@dimen/small_txt_size"
          app:layout_constraintBottom_toBottomOf="@+id/team_standing_played"
          app:layout_constraintStart_toEndOf="@+id/team_standing_won"
          app:layout_constraintTop_toTopOf="@+id/team_standing_played"/>

      <TextView
          android:id="@+id/team_standing_lost"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/small_margin"
          android:fontFamily="@font/fredoka_one"
          android:text="@string/lost"
          android:textAlignment="center"
          android:textColor="@color/whiteColor"
          android:textSize="@dimen/small_txt_size"
          app:layout_constraintBottom_toBottomOf="@+id/team_standing_played"
          app:layout_constraintStart_toEndOf="@+id/team_standing_draw"
          app:layout_constraintTop_toTopOf="@+id/team_standing_played"/>

      <TextView
          android:id="@+id/team_standing_goals"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/small_margin"
          android:fontFamily="@font/fredoka_one"
          android:text="@string/scored"
          android:textAlignment="center"
          android:textColor="@color/whiteColor"
          android:textSize="@dimen/small_txt_size"
          app:layout_constraintBottom_toBottomOf="@+id/team_standing_played"
          app:layout_constraintStart_toEndOf="@+id/team_standing_lost"
          app:layout_constraintTop_toTopOf="@+id/team_standing_played"/>

      <TextView
          android:id="@+id/team_standing_conceded"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/small_margin"
          android:fontFamily="@font/fredoka_one"
          android:text="@string/conceded"
          android:textAlignment="center"
          android:textColor="@color/whiteColor"
          android:textSize="@dimen/small_txt_size"
          app:layout_constraintBottom_toBottomOf="@+id/team_standing_played"
          app:layout_constraintStart_toEndOf="@+id/team_standing_goals"
          app:layout_constraintTop_toTopOf="@+id/team_standing_played"/>

      <TextView
          android:id="@+id/team_standing_points"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/small_margin"
          android:fontFamily="@font/fredoka_one"
          android:text="@string/points"
          android:textAlignment="center"
          android:textColor="@color/blackColor"
          android:textSize="@dimen/small_txt_size"
          app:layout_constraintBottom_toBottomOf="@+id/team_standing_played"
          app:layout_constraintStart_toEndOf="@+id/team_standing_conceded"
          app:layout_constraintTop_toTopOf="@+id/team_standing_played"/>

      <TextView
          android:id="@+id/team_standing_difference"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="@dimen/small_padding"
          app:layout_constraintBottom_toBottomOf="@+id/team_standing_played"
          app:layout_constraintStart_toEndOf="@+id/team_standing_points"
          app:layout_constraintTop_toTopOf="@+id/team_standing_played"
          android:textAlignment="center"
          android:fontFamily="@font/fredoka_one"
          android:textSize="@dimen/small_txt_size"/>
    </android.support.constraint.ConstraintLayout>
  </android.support.v7.widget.CardView>
</HorizontalScrollView>